# match3

./: .gitignore  CMakeLists.txt
cmake/: run.bat
resources/: config.json
sfml-build/: CMakeCache.txt
src/: Animation.cpp  Animation.h  BoardController.cpp  BoardController.h  BoardController.hpp  BoardLogic.cpp  BoardLogic.h  BoardLogic.hpp  DrawBoard.cpp  DrawBoard.h  DrawBoard.hpp  DrawSplashScreen.cpp  DrawSplashScreen.h  GameConfig.cpp  GameConfig.h  GameController.cpp  GameController.h  GameController.hpp  Gem.cpp  Gem.h  Gem.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  json.hpp  main.cpp  resources.h.in
